fixed alignment issues on mobile devices.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-flow: column;
   justify-content: center;
-  width: 500px;
   margin: 0 auto;
+}
+
+.header {
+  text-align: center;
 }
